--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
                 <input class = "btn btn-primary" type="submit">
             </div>
         </form>
-        <div>
+        <div class="text-white">
           {{all_words}}
           {{content}},{{intent}}
         </div>
