--- a/templates/home.html
+++ b/templates/home.html
@@ -11,19 +11,20 @@
     <title>Financial Deep Mind Chat bot - Natural language understanding</title>
 
     <!-- Bootstrap core CSS -->
-    <link href={{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }} rel="stylesheet">
+    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href={{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }} rel="stylesheet">
+    <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href={{ url_for('static', filename='css/grayscale.min.css') }} rel="stylesheet">
-
+    <link href="{{ url_for('static', filename='css/grayscale.min.css') }}" rel="stylesheet">
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   </head>
 
-  <body id="page-top">
+  <body id="page-top" ng-app="nluApp">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -61,23 +62,24 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section text-center">
+    <section id="about" class="about-section text-center" ng-controller="nluController">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2 class="text-white mb-4">Intent classification and named entities recognition</h2>
           </div>
         </div>
-        <form action = "http://localhost:5000/submit" method="post">
-            <div class= "rows">
+        <!-- <form  action = "http://localhost:5000/submit" method="post"> -->
+        <form role="form" ng-submit="getResults()">
+          <div class= "rows">
                 <div class="form-group">
                     <label>User says</label>
-                    <input type="text" class="form-control" name="content" placeholder="User says!!!">
+                    <input type="text" class="form-control" name = "content" ng-model = "content" placeholder="User says!!!">
                 </div>
                 <input class = "btn btn-primary" type="submit">
             </div>
         </form>
-        <div class="text-white">
+        <div class="text-white" >
           {{all_words}}
           {{content}},{{intent}}
           
@@ -98,7 +100,6 @@
               <tr>
                   <th> {{ key[0] }} </th>
                   <th> {{ key[1] }}</th>
-                  <th> {{ key[2] }}</th>
               </tr>
               
             {% endfor %}
@@ -252,7 +253,7 @@
     <script src="{{url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
     <script src="{{url_for('static', filename='js/grayscale.min.js') }}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
    
 
   </body>
