--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
             <h2 class="text-white mb-4">Intent classification and named entities recognition</h2>
           </div>
         </div>
-        <!-- <form  action = "http://localhost:5000/submit" method="post"> -->
+        <!-- <form  action = "http://localhost:5000/submit" method="post">  -->
         <form role="form" ng-submit="getResults()">
           <div class= "rows">
                 <div class="form-group">
@@ -79,6 +79,7 @@
                 <input class = "btn btn-primary" type="submit">
             </div>
         </form>
+        <!-- </form>d -->
         <div class="text-white" >
           {{all_words}}
           {{content}},{{intent}}
