--- a/templates/home.html
+++ b/templates/home.html
@@ -92,6 +92,8 @@
             <!-- {{outputs}} -->
             <b>Text:</b> {{content}} <br>
             <hr>
+            {{all_words}}
+            <hr>
             <b>Intent:</b> {{intent}}
             <hr>
             <!-- aloooooooooooooooooooooooooooooooooooo -->
