--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">FDM</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -84,6 +84,19 @@
             </div>
         </form>
         <!-- </form>d -->
+        `<form  action = "http://localhost:5000/check" method="post"> 
+          <!-- <form role="form" ng-submit="getResults()" method="POST"> -->
+            <div class= "rows">
+                  <div class="form-group">
+                      <label>Content:</label>
+                      <input type="text" class="form-control" name = "content" value={{content}} placeholder="User says!!!">
+                      <input type="text" class="form-control" name = "intent" value={{intent}} placeholder="Intent!!!">
+                      <input type="radio" class="form-control" name = "check_true" value='True'>
+                      <input type="radio" class="form-control" name = "check_false" value='False'>
+                    </div>
+                  <input class = "btn btn-primary" type="submit"> 
+              </div>
+          </form>
           <div class="text-white" id="myTextarea" >
             <!-- {{all_words}}
             {{content}},
