--- a/templates/check.html
+++ b/templates/check.html
@@ -21,15 +21,61 @@
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/grayscale.min.css') }}" rel="stylesheet">
     <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </head>
   <style>
   table {
     margin: 0 auto; /* or margin: 0 auto 0 auto */
   }
+  body {
+      padding-top: 70px;
+      /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+  }
+  .button {
+    border-radius: 4px;
+    background-color: #00CCFF;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    padding: 15px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    /*right: -20px;*/
+    transition: 0.5s;
+  }
+  .button:hover span {
+    padding-right: 20px;
+  }
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+  .sub{
+      margin-top: 20px; 
+  }
+  .like-icon{
+      color: blue;
+  }
+  .unlike-icon{
+      color: #DDDDDD;
+  }
   </style>
-  <body id="page-top" ng-app="nluApp">
-
+  <body id="page-top">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
@@ -69,174 +115,30 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section text-center" ng-controller="nluController">
+    <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2 class="text-white mb-4">Intent classification and named entities recognition</h2>
+            <h2 class="text-white mb-4">Check word not in vocabulary</h2>
           </div>
         </div>
-        <!-- <form  action = "http://localhost:5000/submit" method="post">  -->
-        <!-- <form role="form" ng-submit="getResults()" method="POST"> -->
-          <!-- <div class= "rows">
-                <div class="form-group">
-                    <label>User says</label>
-                    <input type="text" class="form-control" name = "content" ng-model = "content" placeholder="User says!!!">
-                </div>
-                <input class = "btn btn-primary" type="submit"> 
-            </div>
-        </form> -->
-        <!-- </form>d -->
-        {% for sentence in texts %}
-        <div style="margin-top : 50px; margin-bottom: 50px;">
-          <form  action = "http://localhost:5000/check" method="post"> 
-            <!-- <form role="form" ng-submit="getResults()" method="POST"> -->
-              <div class= "rows">
-                    <div class="form-group text-white">
-                        <label>Content:</label>
-                        <input style="width:500px; margin-bottom:20px;" type = "text" name = "content" value = "{{sentence[1]}}">
-                        <label >Intent:</label>
-                        <input style=" margin-bottom:20px;" type = "text" name = "intent" value = "{{sentence[0]}}">
-                        <input class = "btn btn-primary" type="submit" value="Check False"> 
-                      </div>
-                    
-                </div>
-            </form>
+        <div ng-app="checkWordApp" ng-controller="wordsCtrl">
+          
+          <ul class="">
+            <li class="list-group-item" style="height:50px; width: 1000px;" ng-repeat="word in all_words track by $index">    
+                <h5>
+                  <input type=”text” style="width: 500px;" ng-model = word disabled>
+                  <!-- <span class="glyphicon glyphicon-time" >{{word}}</span>  -->
+                  <input type = "button" value = 'x' ng-click = remove($index)>
+                </h5>        
+            </li>
+          </ul>
+          <button class="button subnext" ng-click="next()" style="float: right;"><span>Next </span></button>
+          <button class="button subprev" ng-click="prev()" style="float: right;"><span>Prev </span></button>
         </div>
-        {% endfor %}
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects-section bg-light">
-      <div class="container">
 
-        <!-- Featured Project Row -->
-        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="{{url_for('static', filename='img/bg-masthead.jpg')}}" alt="">
-          </div>
-          <div class="col-xl-4 col-lg-5">
-            <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="{{url_for('static', filename='img/demo-image-01.jpg')}}" alt="">
-          </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                  <hr class="d-none d-lg-block mb-0 ml-0">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project Two Row -->
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="{{url_for('static', filename='img/demo-image-02.jpg')}}" alt="">
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                  <hr class="d-none d-lg-block mb-0 mr-0">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- Signup Section -->
-    <section id="signup" class="signup-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-            <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-            <form class="form-inline d-flex">
-              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact-section bg-black">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-envelope text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Email</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
@@ -252,11 +154,87 @@
     <script src="{{url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
     <script src="{{url_for('static', filename='js/grayscale.min.js') }}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-   <!-- <script>
-      var textedJson = JSON.stringify(outputs, undefined, 4);
-      $('#myTextarea').text(textedJson);
-   </script> -->
+    <!-- <script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
+    <script type="text/javascript">
+      var app = angular.module('checkWordApp', []);
+      app.controller("wordsCtrl", function ($scope, $http) {
+        var step;
+        console.log('start controller words');
+        var all_words_notin_vocab;
+        var step_size;
+        $http.get("/word").then(function(result) {
+            step = 0;
+            step_size = 5;
+            console.log('startaaa');
+            
+            console.log(result);
+            all_words_notin_vocab = result.data.results
+            console.log(all_words_notin_vocab);
+            $scope.all_words = []
+            if((step + 1) * step_size < all_words_notin_vocab.length){
+              for(var j = 0 ; j < (step + 1) * step_size ; j++){
+                $scope.all_words.push(all_words_notin_vocab[j]);
+              }
+            }else{
+              for(var j = 0 ; j < all_words_notin_vocab.length ; j++){
+                $scope.all_words.push(all_words_notin_vocab[j]);
+              }
+            }
+            
+            if(all_words_notin_vocab.length == 1){
+                $('.subnext').hide();
+            }            
+            $('.subprev').hide();
+        }); 
+
+        $scope.next = function(){
+          console.log('start next!');
+          step++;
+          console.log(step);
+          if(all_words_notin_vocab.length == 1){
+              $('.subnext').hide();
+              $('.subprev').hide();
+          }
+          else{
+              if( step > 0 && step<all_words_notin_vocab.length-1){
+                  $('.subprev').show();
+                  $('.subnext').show();
+              }
+              if(step == all_words_notin_vocab.length-1) {
+                  $('.subnext').hide();
+                  $('.subprev').show();       
+              }
+          }
+        }
+        $scope.prev = function(){
+          step-=1;
+          console.log(step);
+          if( step > 0){
+              $('.subprev').show();
+              $('.subnext').show();
+          }
+          if(step== all_words_notin_vocab.length-1) {
+              $('.subprev').show();
+              $('.subnext').hide();
+              
+          }
+          if(step==0){
+              $('.subprev').hide();
+              $('.subnext').show();
+          }
+        }
+        $scope.remove = function(index){
+          console.log(index);
+          all_words_notin_vocab.splice(index, 1);
+          console.log(all_words_notin_vocab);
+          $scope.all_words = []
+          for(var j = 0 ; j < (step + 1) * step_size ; j++){
+            $scope.all_words.push(all_words_notin_vocab[j]);
+          }
+        }
+        
+    })
+  </script>
 
   </body>
 
